# Ralph

./: .gitignore  CLAUDE.md  PROMPT.md  README.md  pyproject.toml
.claude/: settings.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: README.md  architecture.md  cli-reference.md  configuration.md  core-concepts.md  getting-started.md  subagents.md  troubleshooting.md
specs/: PRD.md  SPEC-001-validation-reliability.md  SPEC-002-tool-access-parity.md  SPEC-003-spec-integration.md  SPEC-004-memory-system.md  SPEC-005-context-optimization.md  SPEC-006-cost-tracking.md  SPEC-007-state-cleanup.md  SPEC-008-clean-command.md  SPEC-009-file-organization.md  TECHNICAL_ARCHITECTURE.md
tests/: conftest.py  test_animations.py  test_async_input_reader.py  test_async_input_reader_error_handling.py  test_cleanup.py  test_cli.py  test_cli_subagent_events.py  test_cli_token_display.py  test_config.py  test_context.py  test_documentation_agent.py  test_events.py  test_executors.py  test_integration_phase_transitions.py  test_iteration.py  test_mcp_tools.py  test_memory.py  test_memory_manager.py  test_models.py  test_persistence.py  test_phases.py  test_race_conditions.py  test_research_specialist.py  test_runner.py  test_sdk.py  test_sdk_client.py  test_sdk_client_agents.py  test_sdk_hooks.py  test_subagent_config.py  test_subagent_documentation.py  test_subagent_integration.py  test_subagent_templates.py  test_subagents.py  test_task_tool_callback.py  test_templates.py  test_test_engineer_template.py  test_token_display_error_handling.py  test_tool_parity.py  test_tools.py  test_transitions.py  (+1 more)
(+39 files in other folders)
